# fontchan

./: Cargo.toml  README.md
fontchan/: Cargo.toml  build.rs
fontchan-codec/: Cargo.toml
fontchan-codec/src/: bytes.rs  core.rs  lib.rs  partition_decode.rs  partition_encode.rs
fontchan-decoder-wasm/: Cargo.toml  build.rs
fontchan-decoder-wasm/.cargo/: config.toml
fontchan-decoder-wasm/src/: lib.rs
fontchan-partition/: Cargo.toml
fontchan-partition/freq-preset/: .gitignore  extract_zh.py
fontchan-partition/src/: algorithms.rs  char_base.rs  char_freq.rs  config.rs  lib.rs  pages.rs
fontchan-unicode/: Cargo.toml
fontchan-unicode/src/: lib.rs
fontchan-util/: Cargo.toml
fontchan-util/src/: atomic_path.rs  digest.rs  factory.rs  hkt.rs  lazy_file.rs  lib.rs  quant.rs  routine.rs  work_dir.rs
fontchan-wasm-mutate/: Cargo.toml  build.rs
fontchan-wasm-mutate/src/: lib.rs
fontchan/src/: config.rs  main.rs
fontchan/src/builder/: css_decoder.js  font.rs  js.rs  mod.rs  tmpl.rs
samples/: .gitignore  fontchan.config.toml
