[package]
name = "fontchan-decoder-wasm"
version = "0.1.0"
authors = ["hsfzxjy <hsfzxjy@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fontchan-codec = { path = "../fontchan-codec", default-features = false }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
